# brave-core

./: DEPS  LICENSE  brave_paks.gni  brave_repack_locales.gni  package-lock.json  package.json
app/: brave_command_ids.h  brave_command_line_helper.cc  brave_command_line_helper.h  brave_command_line_helper_unittest.cc  brave_exe.rc  brave_main_delegate.cc  brave_main_delegate.h  brave_main_delegate_browsertest.cc  generated_resources.grd  settings_strings.grdp  sharedarraybuffer_disabledtest.cc
browser/: brave_browser_main_extra_parts.cc  brave_browser_main_extra_parts.h  brave_browser_main_parts_mac.h  brave_browser_main_parts_mac.mm  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_content_browser_client.h  brave_content_browser_client_browsertest.cc  brave_drm_tab_helper.cc  brave_drm_tab_helper.h  brave_features_browsertest.cc  brave_local_state_prefs.cc  brave_local_state_prefs.h  brave_profile_prefs.cc  brave_profile_prefs.h  brave_profile_prefs_browsertest.cc  brave_resources_browsertest.cc  brave_resources_util_unittest.cc  brave_scheme_load_browsertest.cc  brave_stats_updater.cc  brave_stats_updater.h  brave_stats_updater_browsertest.cc  brave_stats_updater_params.cc  brave_stats_updater_params.h  brave_stats_updater_unittest.cc  brave_stats_updater_util.cc  brave_stats_updater_util.h  brave_tab_helpers.cc  brave_tab_helpers.h  browser_context_keyed_service_factories.cc  update_util.cc  update_util.h  version_info.cc  version_info.h
common/: brave_paths.cc  (+24 more)
components/brave_urls_ui/: BUILD.gn  brave_urls.html
(+913 files in other folders)
